Set up HTML skeleton and created stylesheet

--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
 	<title>Ecard Blog</title>
 </head>
 <body>
-
+	<header>
+	</header>
+	<div id="wrapper">
+		<div id="main">
+			<article>
+				<header>
+				</header>
+				<img>
+				<p>
+				</p>
+				<footer>
+				</footer>
+			</article>
+			<article>
+				<header>
+				</header>
+				<img>
+				<p>
+				</p>
+				<footer>
+				</footer>			
+			</article>
+		</div>
+		<nav>
+		</nav>
+		<footer>
+		</footer>
+	</div>
 </body>
 </html>
