Entered text for articles. Added some style elements.

--- a/index.html
+++ b/index.html
@@ -1,36 +1,63 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Ecard Blog</title>
-</head>
-<body>
-	<header>
-	</header>
-	<div id="wrapper">
-		<div id="main">
-			<article>
-				<header>
-				</header>
-				<img>
-				<p>
-				</p>
-				<footer>
-				</footer>
-			</article>
-			<article>
-				<header>
-				</header>
-				<img>
-				<p>
-				</p>
-				<footer>
-				</footer>			
-			</article>
+	<head>
+		<title>Ecard Blog</title>
+		<link rel="stylesheet" href="css/stylesheet.css" />
+	</head>
+	<body>
+		<header>
+		</header>
+		<div id="wrapper">
+			<div id="main">
+				<article>
+					<header>
+						<h1>Ecard of the Day</h1>
+					</header>
+					<img>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Proin a consectetur purus.
+					Pellentesque at leo erat, id pellentesque sapien.
+					Cras id purus sem.
+					Nulla lacinia consequat nulla, vitae porttitor urna venenatis id.
+					Nam iaculis risus ac mauris vestibulum malesuada.
+					Nulla dolor mi, cursus sed ornare vel, feugiat sed nibh.
+					Suspendisse vitae pulvinar ligula.
+					In eu dui erat.
+					Etiam sit amet malesuada turpis. Duis dapibus feugiat euismod.
+					Suspendisse vitae consequat nunc. Vivamus aliquet vulputate varius.
+					<a>DOWNLOAD</a></p>
+					<footer>
+						<p>Posted by <a>Steve Smith</a> on August 2, 2012 / Comments (<a>3</a>)</p>
+					</footer>
+				</article>
+				<article>
+					<header>
+						<h1>Doing The Big Work</h1>
+					</header>
+					<img>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Proin a consectetur purus.
+					Pellentesque at leo erat, id pellentesque sapien.
+					Cras id purus sem.
+					Nulla lacinia consequat nulla, vitae porttitor urna venenatis id.
+					Nam iaculis risus ac mauris vestibulum malesuada.
+					Nulla dolor mi, cursus sed ornare vel, feugiat sed nibh.
+					Suspendisse vitae pulvinar ligula.
+					In eu dui erat.
+					Etiam sit amet malesuada turpis.
+					Duis dapibus feugiat euismod.
+					Suspendisse vitae consequat nunc.
+					Vivamus aliquet vulpatate varius.
+					<a>DOWNLOAD</a></p>
+					<footer>
+						<p>Posted by <a>Steve Smith</a> on August 2, 2012 / Comments (<a>3</a>)</p>
+					</footer>			
+				</article>
+			</div>
+			<nav>
+			</nav>
+			<footer>
+			</footer>
 		</div>
-		<nav>
-		</nav>
-		<footer>
-		</footer>
-	</div>
-</body>
+	</body>
 </html>
