Added top background image and colors.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<header>
 						<h1>Ecard of the Day</h1>
 					</header>
-					<img>
+					<img src="images/ecard-nycstartups.jpg" alt="NYC Startups"> 
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					Proin a consectetur purus.
 					Pellentesque at leo erat, id pellentesque sapien.
@@ -27,14 +27,16 @@
 					Suspendisse vitae consequat nunc. Vivamus aliquet vulputate varius.
 					<a>DOWNLOAD</a></p>
 					<footer>
+						<hr>
 						<p>Posted by <a>Steve Smith</a> on August 2, 2012 / Comments (<a>3</a>)</p>
+						<hr class="bottom_line"
 					</footer>
 				</article>
 				<article>
 					<header>
 						<h1>Doing The Big Work</h1>
 					</header>
-					<img>
+					<img src="images/ecard-courage.jpg" alt="Courage"> 
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					Proin a consectetur purus.
 					Pellentesque at leo erat, id pellentesque sapien.
@@ -50,11 +52,34 @@
 					Vivamus aliquet vulpatate varius.
 					<a>DOWNLOAD</a></p>
 					<footer>
+						<hr>
 						<p>Posted by <a>Steve Smith</a> on August 2, 2012 / Comments (<a>3</a>)</p>
+						<hr class="bottom_line"
 					</footer>			
 				</article>
 			</div>
 			<nav>
+				<ul>
+					<li>ARCHIVE</li>
+					<li>January</li>
+					<li>February</li>
+					<li>March</li>
+					<li>April</li>
+					<li>May</li>
+					<li>June</li>
+					<li>July</li>
+				</ul>
+				<ul>
+					<li>BLOGROLL</li>
+					<li>Mailchimp</li>
+					<li>Shopify</li>
+					<li>The Next Web</li>
+					<li>Mint.com</li>
+					<li>Mashable</li>
+				</ul>
+				<img src="images/ad-cut-and-paste.gif" alt="Cut and Paste Ad" style="margin:8px 0px">
+				<img src="images/ad-postcard-tee.png" alt="Postcard Tee Ad" style="margin:8px 0px">
+				<img src="images/ad-submit-your-own.png" alt="Submit Your Own Ad" style="margin:8px 0px">
 			</nav>
 			<footer>
 			</footer>
