--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<header>
+			<img src="images/logo.png" alt="Logo">		
 		</header>
 		<div id="wrapper">
 			<div id="main">
@@ -77,12 +78,15 @@
 					<li>Mint.com</li>
 					<li>Mashable</li>
 				</ul>
-				<img src="images/ad-cut-and-paste.gif" alt="Cut and Paste Ad" style="margin:8px 0px">
-				<img src="images/ad-postcard-tee.png" alt="Postcard Tee Ad" style="margin:8px 0px">
+				<img src="images/ad-cut-and-paste.gif" alt="Cut and Paste Ad" style="margin:8px 0px"><br>
+				<img src="images/ad-postcard-tee.png" alt="Postcard Tee Ad" style="margin:8px 0px"><br>
 				<img src="images/ad-submit-your-own.png" alt="Submit Your Own Ad" style="margin:8px 0px">
 			</nav>
-			<footer>
-			</footer>
 		</div>
+		<footer>
+			<img src="images/social-icon-twitter.png" alt="Twitter">
+			<img src="images/social-icon-facebook.png" alt="Facebook">
+			<img src="images/social-icon-pinterest.png" alt="Pinterest">
+		</footer>
 	</body>
 </html>
