--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 					<header>
 						<h1>Ecard of the Day</h1>
 					</header>
-					<img src="images/ecard-nycstartups.jpg" alt="NYC Startups"> 
+					<div>
+						<img class="blogimage" src="images/ecard-nycstartups.jpg" alt="NYC Startups"> 
+					</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					Proin a consectetur purus.
 					Pellentesque at leo erat, id pellentesque sapien.
@@ -28,16 +30,18 @@
 					Suspendisse vitae consequat nunc. Vivamus aliquet vulputate varius.
 					<a>DOWNLOAD</a></p>
 					<footer>
-						<hr>
+						<hr style="border-top: dotted 1px;">
 						<p>Posted by <a>Steve Smith</a> on August 2, 2012 / Comments (<a>3</a>)</p>
-						<hr class="bottom_line"
+						<hr>
 					</footer>
 				</article>
 				<article>
 					<header>
 						<h1>Doing The Big Work</h1>
 					</header>
-					<img src="images/ecard-courage.jpg" alt="Courage"> 
+					<div>
+						<img class="blogimage" src="images/ecard-courage.jpg" alt="Courage"> 
+					</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 					Proin a consectetur purus.
 					Pellentesque at leo erat, id pellentesque sapien.
@@ -53,13 +57,13 @@
 					Vivamus aliquet vulpatate varius.
 					<a>DOWNLOAD</a></p>
 					<footer>
-						<hr>
+						<hr style="border-top: dotted 1px;">
 						<p>Posted by <a>Steve Smith</a> on August 2, 2012 / Comments (<a>3</a>)</p>
-						<hr class="bottom_line"
+						<hr>
 					</footer>			
 				</article>
 			</div>
-			<nav>
+			<div id="nav">
 				<ul>
 					<li>ARCHIVE</li>
 					<li>January</li>
@@ -78,12 +82,14 @@
 					<li>Mint.com</li>
 					<li>Mashable</li>
 				</ul>
-				<img src="images/ad-cut-and-paste.gif" alt="Cut and Paste Ad" style="margin:8px 0px"><br>
-				<img src="images/ad-postcard-tee.png" alt="Postcard Tee Ad" style="margin:8px 0px"><br>
-				<img src="images/ad-submit-your-own.png" alt="Submit Your Own Ad" style="margin:8px 0px">
-			</nav>
+				<div>
+					<img class="ads" src="images/ad-cut-and-paste.gif" alt="Cut and Paste Ad" style="margin:8px 0px"><br>
+					<img class="ads" src="images/ad-postcard-tee.png" alt="Postcard Tee Ad" style="margin:8px 0px"><br>
+					<img class="ads" src="images/ad-submit-your-own.png" alt="Submit Your Own Ad" style="margin:8px 0px">
+				</div>
+			</div>
 		</div>
-		<footer>
+		<footer class="end">
 			<img src="images/social-icon-twitter.png" alt="Twitter">
 			<img src="images/social-icon-facebook.png" alt="Facebook">
 			<img src="images/social-icon-pinterest.png" alt="Pinterest">
